--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -32,6 +32,7 @@
     - geerlingguy.php-mysql
     - geerlingguy.composer
     - geerlingguy.drush
+    - geerlingguy.phpmyadmin
 
     # Conditionally-installed roles.
     - { role: geerlingguy.drupal-console, when: 'drupal_major_version > 7 and "drupalconsole" in installed_extras' }
