--- a/provisioning/requirements.yml
+++ b/provisioning/requirements.yml
@@ -19,6 +19,7 @@
 - src: geerlingguy.php
 - src: geerlingguy.php-memcached
 - src: geerlingguy.php-mysql
+- src: geerlingguy.phpmyadmin
 - src: geerlingguy.php-pecl
 - src: geerlingguy.php-redis
 - src: geerlingguy.php-xdebug
